Add GitHub link and Fix localized text in home views and layout
Added "View source on GitHub" to landing home page.
Updated localized text.
Fixed layout.

--- a/MEL.Web/Views/Home/AppStart.cshtml
+++ b/MEL.Web/Views/Home/AppStart.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = Localizer["Home Page"].Value;
 }
 
 <div class="jumbotron pb-4">
     <img class="ml-0 pl-0" src="~/images/MEInsightLogo-jumbotron.png" />
-    <p class="lead">@Localizer["An open source Monitoring and Evaluation Data Management System for International Development Projects"].</p>
+    <p class="lead">@Localizer["An open source monitoring and evaluation data management system for international development projects"].</p>
     <hr class="mt-2">
 </div>
 <div class="card-deck">
