--- a/MEL.Web/Views/Shared/_LayoutBlank.cshtml
+++ b/MEL.Web/Views/Shared/_LayoutBlank.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>@ViewData["Title"]</title>
-    <meta name="description" content="M&E Insight, an Open Source Monitoring and Evaluation Data Management System for International Development Projects" />
+    <meta name="description" content="M&E Insight is an open source monitoring and evaluation data management system for international development projects" />
 
     <environment include="Development">
         <!-- Bootstrap v4.3.1 custom theme -->
