--- a/MEL.Web/Views/Shared/_NavigationSettingsMenu.cshtml
+++ b/MEL.Web/Views/Shared/_NavigationSettingsMenu.cshtml
@@ -5,7 +5,7 @@
 @inject UserManager<ApplicationUser> UserManager
 
 <li class="nav-item">
-    <a href="https://github.com/edc-it/MEInsight/" target="_blank" class="nav-link text-blue-200" title="Visit M&E Insight on GitHub!"><i class="fab fa-github"></i></a>
+    <a href="https://github.com/edc-it/MEInsight/" target="_blank" class="nav-link text-blue-200" title="@Localizer["Visit M&E Insight on GitHub!"]"><i class="fab fa-github"></i></a>
 </li>
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle text-white" href="#" title="Settings menu" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
