Fix Model properties
Fixed missing "Ref" in EvaluationStatusId and in EnrollmentStatusId, the correct property names  are RefEvaluationStatusId, RefEnrollmentStatusId.
Fixed RefEducationAdministratorCode to EducationAdministratorCode.
Fixed TLMDistributionStatusCode to DistributionStatusCode.
Updated related Controllers and Views.
Recreated the initial migration schema.

--- a/MEL.Web/Areas/Settings/Views/EnrollmentStatus/Delete.cshtml
+++ b/MEL.Web/Areas/Settings/Views/EnrollmentStatus/Delete.cshtml
@@ -40,7 +40,7 @@
     </dl>
     
     <form asp-action="Delete" id="main-form">
-        <input type="hidden" asp-for="EnrollmentStatusId" />
+        <input type="hidden" asp-for="RefEnrollmentStatusId" />
             <!-- button group start -->
             <div class="form-group mt-5">
                 <a id="cancelbutton" class="btn btn-secondary mr-2" asp-action="Index" asp-route-id="@ViewBag.ParentId">
