--- a/MEL.Web/Areas/Settings/Views/TLMDistributionStatus/Edit.cshtml
+++ b/MEL.Web/Areas/Settings/Views/TLMDistributionStatus/Edit.cshtml
@@ -18,9 +18,9 @@
             
             <div class="form-group" asp-enabled="TLMDistributionStatusCode">
                 <!--input start-->
-                <label asp-for="TLMDistributionStatusCode" class="control-label"></label>
-                <input asp-for="TLMDistributionStatusCode" autocomplete="off" class="form-control" />
-                <span asp-validation-for="TLMDistributionStatusCode" class="text-danger"></span>
+                <label asp-for="DistributionStatusCode" class="control-label"></label>
+                <input asp-for="DistributionStatusCode" autocomplete="off" class="form-control" />
+                <span asp-validation-for="DistributionStatusCode" class="text-danger"></span>
                 <!--input end-->
             </div>
             
