--- a/MEL.Web/Areas/Settings/Views/TLMDistributionStatus/Index.cshtml
+++ b/MEL.Web/Areas/Settings/Views/TLMDistributionStatus/Index.cshtml
@@ -46,7 +46,7 @@
                 <thead>
                     <tr>
                         <th>
-                            @Html.DisplayNameFor(model => model.TLMDistributionStatusCode)
+                            @Html.DisplayNameFor(model => model.DistributionStatusCode)
                         </th>
                         <th>
                             @Html.DisplayNameFor(model => model.DistributionStatus)
@@ -59,7 +59,7 @@
                     {
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.TLMDistributionStatusCode)
+                                @Html.DisplayFor(modelItem => item.DistributionStatusCode)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.DistributionStatus)
