--- a/MEL.Web/Areas/Settings/Views/EvaluationStatus/Delete.cshtml
+++ b/MEL.Web/Areas/Settings/Views/EvaluationStatus/Delete.cshtml
@@ -40,7 +40,7 @@
     </dl>
     
     <form asp-action="Delete" id="main-form">
-        <input type="hidden" asp-for="EvaluationStatusId" />
+        <input type="hidden" asp-for="RefEvaluationStatusId" />
             <!-- button group start -->
             <div class="form-group mt-5">
                 <a id="cancelbutton" class="btn btn-secondary mr-2" asp-action="Index" asp-route-id="@ViewBag.ParentId">
