--- a/MEL.Web/Areas/Settings/Views/EvaluationStatus/Edit.cshtml
+++ b/MEL.Web/Areas/Settings/Views/EvaluationStatus/Edit.cshtml
@@ -14,7 +14,7 @@
         <form asp-action="Edit" id="main-form">
             <div asp-validation-summary="All" class="text-danger"></div>
             <input type="hidden" name="ParentId" value="@ViewBag.ParentId" />
-            <input type="hidden" asp-for="EvaluationStatusId" />
+            <input type="hidden" asp-for="RefEvaluationStatusId" />
             
             <div class="form-group" asp-enabled="EvaluationStatusCode">
                 <!--input start-->
