--- a/MEL.Web/Areas/Settings/Views/TLMDistributionStatus/Delete.cshtml
+++ b/MEL.Web/Areas/Settings/Views/TLMDistributionStatus/Delete.cshtml
@@ -23,10 +23,10 @@
     }
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TLMDistributionStatusCode)
+            @Html.DisplayNameFor(model => model.DistributionStatusCode)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TLMDistributionStatusCode)
+            @Html.DisplayFor(model => model.DistributionStatusCode)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DistributionStatus)
