--- a/MEL.Web/Views/Organizations/Create.cshtml
+++ b/MEL.Web/Views/Organizations/Create.cshtml
@@ -45,120 +45,8 @@
                 <!--input end-->
             </div>
 
-            <div class="form-group required" asp-enabled="RefOrganizationTypeId">
-                <!--fk select start-->
-                <label asp-for="RefOrganizationTypeId" class="control-label"></label>
-                <select asp-for="RefOrganizationTypeId" class="form-control custom-select" asp-items="ViewBag.RefOrganizationTypeId">
-                    <option disabled selected></option>
-                </select>
-                <span asp-validation-for="RefOrganizationTypeId" class="text-danger"></span>
-                <!--fk select end-->
-            </div>
-
-            <div class="form-group" asp-enabled="Contact">
-                <!--input start-->
-                <label asp-for="Contact" class="control-label"></label>
-                <input asp-for="Contact" autocomplete="off" class="form-control" />
-                <span asp-validation-for="Contact" class="text-danger"></span>
-                <!--input end-->
-            </div>
-
-            <div class="form-group" asp-enabled="Phone">
-                <!--input start-->
-                <label asp-for="Phone" class="control-label"></label>
-                <input asp-for="Phone" autocomplete="off" class="form-control" />
-                <span asp-validation-for="Phone" class="text-danger"></span>
-                <!--input end-->
-            </div>
-            @*
-        RefLocation is a self-referencing table with hierarchical (geo)locations.
-        This foreach dynamically generates each required location input by location level
-        i.e. Country -> Province -> District or Level1 -> Level2 -> Level 3 (LocationTypes by level)
-        Only the last level RefLocationId is saved on this record.
-            *@
-            @{
-                // If RefLocationId is enabled
-                if (Configuration["disabled:Organizations:RefLocationId"] != "disabled")
-                {
-                    var i = 0;
-                    @foreach (var item in ViewData["RefLocationTypes"] as IEnumerable<MEL.Entities.Reference.RefLocationType>)
-                    {
-                        @if (item.LocationLevel == 1)
-                        {
-                            <div class="form-group required">
-                                <label class="control-label">@item.LocationType</label>
-                                <select class="form-control required" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true" asp-items="@ViewBag.RefLocationId" required>
-                                    <option disabled selected></option>
-                                </select>
-                                <span class="text-danger field-validation-valid" data-valmsg-for="RefLocation@{@item.LocationLevel}Id" data-valmsg-replace="true"></span>
-                            </div>
-                        }
-                        else
-                        {
-                            if (item.LocationLevel == (int)ViewData["RefLocationTypesCount"])
-                            {
-                                <div class="form-group required">
-                                    <label class="control-label">@item.LocationType</label>
-                                    <select class="form-control required" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true">
-                                        <option disabled selected></option>
-                                    </select>
-                                    <span class="text-danger field-validation-valid" data-valmsg-for="RefLocationId" data-valmsg-replace="true"></span>
-                                </div>
-                            }
-                            else
-                            {
-                                if (item.LocationLevel == 2)
-                                {
-                                    <div class="form-group required">
-                                        <label class="control-label">@item.LocationType</label>
-                                        <select class="form-control required" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true" required>
-                                            <option disabled selected></option>
-                                        </select>
-                                        <span class="text-danger field-validation-valid" data-valmsg-for="RefLocation@{@item.LocationLevel}Id" data-valmsg-replace="true"></span>
-                                    </div>
-                                }
-                                else
-                                {
-                                    <div class="form-group required">
-                                        <label class="control-label">@item.LocationType</label>
-                                        <select class="form-control required" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true">
-                                            <option disabled selected></option>
-                                        </select>
-                                        <span class="text-danger field-validation-valid" data-valmsg-for="RefLocation@{@item.LocationLevel}Id" data-valmsg-replace="true"></span>
-                                    </div>
-                                }
-                            }
-                        }
-                        i++;
-                    }
-                }
-            }
-
-            <div class="form-group" asp-enabled="Address">
-                <!--textarea start-->
-                <label asp-for="Address" class="control-label"></label>
-                <textarea asp-for="Address" class="form-control"></textarea>
-                <span asp-validation-for="Address" class="text-danger"></span>
-                <!--textarea end-->
-            </div>
-
-            <div class="form-group" asp-enabled="Latitude">
-                <!--input start-->
-                <label asp-for="Latitude" class="control-label"></label>
-                <input asp-for="Latitude" autocomplete="off" class="form-control" />
-                <span asp-validation-for="Latitude" class="text-danger"></span>
-                <!--input end-->
-            </div>
-
-            <div class="form-group" asp-enabled="Longitude">
-                <!--input start-->
-                <label asp-for="Longitude" class="control-label"></label>
-                <input asp-for="Longitude" autocomplete="off" class="form-control" />
-                <span asp-validation-for="Longitude" class="text-danger"></span>
-                <!--input end-->
-            </div>
             @* Organization is a self-referencing table with a hierarchical Organization Unit like structure
-        This setting allows MEL Role only to create/edit Organizations set as Organization Units
+                This setting allows MEL Role only to create/edit Organizations set as Organization Units
             *@
             @if (AuthorizationService.AuthorizeAsync(User, "RequireMELRole").GetAwaiter().GetResult().Succeeded)
             {
@@ -200,6 +88,124 @@
                 <input type="hidden" name="IsOrganizationUnit" value="false" />
             }
 
+            <div class="form-group required" asp-enabled="RefOrganizationTypeId">
+                <!--fk select start-->
+                <label asp-for="RefOrganizationTypeId" class="control-label"></label>
+                <select asp-for="RefOrganizationTypeId" class="form-control custom-select" asp-items="ViewBag.RefOrganizationTypeId">
+                    <option disabled selected></option>
+                </select>
+                <span asp-validation-for="RefOrganizationTypeId" class="text-danger"></span>
+                <!--fk select end-->
+            </div>
+
+            <div class="form-group" asp-enabled="Contact">
+                <!--input start-->
+                <label asp-for="Contact" class="control-label"></label>
+                <input asp-for="Contact" autocomplete="off" class="form-control" />
+                <span asp-validation-for="Contact" class="text-danger"></span>
+                <!--input end-->
+            </div>
+
+            <div class="form-group" asp-enabled="Phone">
+                <!--input start-->
+                <label asp-for="Phone" class="control-label"></label>
+                <input asp-for="Phone" autocomplete="off" class="form-control" />
+                <span asp-validation-for="Phone" class="text-danger"></span>
+                <!--input end-->
+            </div>
+            @*
+                RefLocation is a self-referencing table with hierarchical (geo)locations.
+                This foreach dynamically generates each required location input by location level
+                i.e. Country -> Province -> District or Level1 -> Level2 -> Level 3 (LocationTypes by level)
+                Only the last level RefLocationId is saved on this record.
+            *@
+            @{
+                // If RefLocationId is enabled
+                if (Configuration["disabled:Organizations:RefLocationId"] != "disabled")
+                {
+                    <div id="location-container">
+                        @{
+                            var i = 0;
+                        }
+                        @foreach (var item in ViewData["RefLocationTypes"] as IEnumerable<MEL.Entities.Reference.RefLocationType>)
+                        {
+                            @if (item.LocationLevel == 1)
+                            {
+                                <div class="form-group required">
+                                    <label class="control-label">@item.LocationType</label>
+                                    <select class="form-control required" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true" asp-items="@ViewBag.RefLocationId" required>
+                                        <option disabled selected></option>
+                                    </select>
+                                    <span class="text-danger field-validation-valid" data-valmsg-for="RefLocation@{@item.LocationLevel}Id" data-valmsg-replace="true"></span>
+                                </div>
+                            }
+                            else
+                            {
+                                if (item.LocationLevel == (int)ViewData["RefLocationTypesCount"])
+                                {
+                                    <div class="form-group required">
+                                        <label class="control-label">@item.LocationType</label>
+                                        <select class="form-control required" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true">
+                                            <option disabled selected></option>
+                                        </select>
+                                        <span class="text-danger field-validation-valid" data-valmsg-for="RefLocationId" data-valmsg-replace="true"></span>
+                                    </div>
+                                }
+                                else
+                                {
+                                    if (item.LocationLevel == 2)
+                                    {
+                                        <div class="form-group required">
+                                            <label class="control-label">@item.LocationType</label>
+                                            <select class="form-control required" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true" required>
+                                                <option disabled selected></option>
+                                            </select>
+                                            <span class="text-danger field-validation-valid" data-valmsg-for="RefLocation@{@item.LocationLevel}Id" data-valmsg-replace="true"></span>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div class="form-group required">
+                                            <label class="control-label">@item.LocationType</label>
+                                            <select class="form-control required" data-locationlevel="@item.LocationLevel" id="RefLocation@{@item.LocationLevel}Id" name="RefLocationId[@i]" data-val="true">
+                                                <option disabled selected></option>
+                                            </select>
+                                            <span class="text-danger field-validation-valid" data-valmsg-for="RefLocation@{@item.LocationLevel}Id" data-valmsg-replace="true"></span>
+                                        </div>
+                                    }
+                                }
+                            }
+                            i++;
+                        }
+                    </div>
+                }
+            }
+
+            <div class="form-group" asp-enabled="Address">
+                <!--textarea start-->
+                <label asp-for="Address" class="control-label"></label>
+                <textarea asp-for="Address" class="form-control"></textarea>
+                <span asp-validation-for="Address" class="text-danger"></span>
+                <!--textarea end-->
+            </div>
+
+            <div class="form-group" asp-enabled="Latitude">
+                <!--input start-->
+                <label asp-for="Latitude" class="control-label"></label>
+                <input asp-for="Latitude" autocomplete="off" class="form-control" />
+                <span asp-validation-for="Latitude" class="text-danger"></span>
+                <!--input end-->
+            </div>
+
+            <div class="form-group" asp-enabled="Longitude">
+                <!--input start-->
+                <label asp-for="Longitude" class="control-label"></label>
+                <input asp-for="Longitude" autocomplete="off" class="form-control" />
+                <span asp-validation-for="Longitude" class="text-danger"></span>
+                <!--input end-->
+            </div>
+
+
             <!-- button group start -->
             <div class="form-group text-right mt-5">
                 <a id="cancelbutton" class="btn btn-secondary mr-2" asp-action="Index" asp-route-id="@ViewBag.ParentId">
@@ -230,7 +236,7 @@
         var totalLocationLevels = $('[data-locationlevel]').length;
 
         // JQuery select2 chained drop-downs by [data-locationlevel]
-        // On change or remove event clears select options and 
+        // On change or remove event clears select options and
         // requests (Ajax) the new selected location options
         $('[data-locationlevel]').select2({
             theme: "bootstrap4",
@@ -299,6 +305,19 @@
                     }
                 }
             });
+
+        // Disable Location for Organization Units
+        $('input[name="IsOrganizationUnit"]:radio').on('change', function () {
+            if ($(this).val() == "true") {
+                $('#location-container').show();
+                $("select[name=RefOrganizationTypeId] option[value=1]").prop('selected','selected');
+            }
+            else {
+                $('#location-container').hide();
+                $("select[name=RefOrganizationTypeId]").val('');
+            }
+        });
+
     });
     </script>
 }
