Fix Group close button policy
Updated Group Close button taghelper policy to include policy="RequireMELOfficerRole".

--- a/MEL.Web/Views/GroupEvaluations/Index.cshtml
+++ b/MEL.Web/Views/GroupEvaluations/Index.cshtml
@@ -62,7 +62,7 @@
                     </div>
 
                     <!--close button start-->
-                    <div class="btn-group btn-group-sm mb-2" role="group" aria-label="closegroup">
+                    <div policy="RequireMELOfficerRole" class="btn-group btn-group-sm mb-2" role="group" aria-label="closegroup">
                         <button id="btn-close" type="button" class="btn btn-warning">
                             <i class="fas fa-unlock-alt"></i> @Localizer["Close"]
                         </button>
