--- a/MEL.Web/Views/GroupEnrollments/Index.cshtml
+++ b/MEL.Web/Views/GroupEnrollments/Index.cshtml
@@ -66,7 +66,7 @@
                     <!--create end-->
 
                     <!--close button start-->
-                    <div class="btn-group btn-group-sm mb-2" role="group" aria-label="closegroup">
+                    <div policy="RequireMELOfficerRole" class="btn-group btn-group-sm mb-2" role="group" aria-label="closegroup">
                         <button id="btn-close" type="button" class="btn btn-warning">
                             <i class="fas fa-unlock-alt"></i> @Localizer["Close"]
                         </button>
