Add Teaching and Learning Materials (TLM) Distribution tracking
Added Teaching and Learning Materials (TLM) Distribution entities, controllers and views to help track book distribution.  Includes TLM Distribution Periods > TLM Distribution > TLM Distribution Details > TLM Materials tracking.

--- a/MEL.Web/Views/Shared/_NavigationMenu.cshtml
+++ b/MEL.Web/Views/Shared/_NavigationMenu.cshtml
@@ -22,13 +22,15 @@
     </li>
 
     @*<li class="nav-item @Html.IsSelected(controller: "GroupEnrollments")">
-        <a class="nav-link text-white" asp-route-id="@userOrganizacionId" asp-controller="GroupEnrollments" asp-action="Index">
-            @Localizer["Groups"]
-        </a>
-    </li>
-    <li class="nav-item @Html.IsSelected(controller: "TLMDistributions") @Html.IsSelected(controller: "TLMDistributionDetails") @Html.IsSelected(controller: "TLMDistributionPeriods")">
-        <a class="nav-link text-white" asp-controller="TLMDistributionPeriods" asp-action="Index">
+            <a class="nav-link text-white" asp-route-id="@userOrganizacionId" asp-controller="GroupEnrollments" asp-action="Index">
+                @Localizer["Groups"]
+            </a>
+        </li>
+    *@
+
+    <li asp-enabled="menuTLM" class="nav-item @Html.IsSelected(controller: "TLMDistributions") @Html.IsSelected(controller: "TLMDistributionDetails") @Html.IsSelected(controller: "TLMDistributionPeriods")">
+        <a class="nav-link text-white" asp-controller="TLMDistributionPeriods" asp-action="Index" title="Teaching and Learning Materials">
             @Localizer["TLM"]
         </a>
-    </li>*@
+    </li>
 }
