--- a/MEL.Web/Views/Shared/_ServerListScriptsPartial.cshtml
+++ b/MEL.Web/Views/Shared/_ServerListScriptsPartial.cshtml
@@ -11,6 +11,7 @@
     <script src="~/lib/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
     <script src="~/lib/datatables.net-select/js/dataTables.select.min.js"></script>
     <script src="~/lib/datatables.net-select-bs4/js/select.bootstrap4.min.js"></script>
+    <script src="~/lib/bootbox/dist/bootbox.min.js"></script>
     <script src="~/lib/ladda-bootstrap/spin.min.js"></script>
     <script src="~/lib/ladda-bootstrap/ladda.min.js"></script>
 </environment>
@@ -27,6 +28,7 @@
     <script src="~/lib/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
     <script src="~/lib/datatables.net-select/js/dataTables.select.min.js" asp-append-version="true"></script>
     <script src="~/lib/datatables.net-select-bs4/js/select.bootstrap4.min.js" asp-append-version="true"></script>
+    <script src="~/lib/bootbox/dist/bootbox.min.js" asp-append-version="true"></script>
     <script src="~/lib/ladda-bootstrap/spin.min.js" asp-append-version="true"></script>
     <script src="~/lib/ladda-bootstrap/ladda.min.js" asp-append-version="true"></script>
 </environment>
