--- a/MEL.Web/wwwroot/css/site.css
+++ b/MEL.Web/wwwroot/css/site.css
@@ -299,8 +299,8 @@ div.input-group.date span.input-group-append {
 
 #tree-container {
     width: 100%;
-    height: 100px;
-    /*max-height: 100px;*/
+    /*height: 100px;*/
+    max-height: 400px;
     overflow: auto;
     display: inline-block;
     resize: vertical
