Add option to enroll existing participants to a group
Updated Group Enrollments to allow enrollment of existing participants in a Group.

--- a/MEL.Web/Views/GroupEnrollments/Details.cshtml
+++ b/MEL.Web/Views/GroupEnrollments/Details.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayNameFor(model => model.Participants)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Participants.FirstName)
+            @Html.DisplayFor(model => model.Participants.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Groups)
@@ -82,7 +82,10 @@
     <div class="row mt-5">
         <div class="col">
             <a asp-action="Index" asp-route-id="@ViewBag.ParentId" class="btn btn-secondary mr-1"><i class="fas fa-chevron-left"></i> @Localizer["Back to List"]</a>
-            <a policy="RequireEditRole" asp-action="Edit" asp-route-id="@Model.GroupEnrollmentId" class="btn btn-primary"><i class="fas fa-pencil-alt"></i> @Localizer["Edit"]</a>
+            @if (ViewBag.Closed == true)
+            {
+                <a policy="RequireEditRole" asp-action="Edit" asp-route-id="@Model.GroupEnrollmentId" class="btn btn-primary"><i class="fas fa-pencil-alt"></i> @Localizer["Edit"]</a>
+            }
         </div>
         <div class="col text-right"></div>
     </div>
