--- a/MEL.Web/Views/GroupEnrollments/Delete.cshtml
+++ b/MEL.Web/Views/GroupEnrollments/Delete.cshtml
@@ -44,13 +44,13 @@
             @Html.DisplayNameFor(model => model.Participants)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Participants.FirstName)
+            @Html.DisplayFor(model => model.Participants.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Groups)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Groups.GroupCode)
+            @Html.DisplayFor(model => model.Groups.GroupName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.EnrollmentStatus)
