--- a/MEL.Web/Views/GroupEnrollments/Edit.cshtml
+++ b/MEL.Web/Views/GroupEnrollments/Edit.cshtml
@@ -14,6 +14,11 @@
         <form asp-action="Edit" id="main-form">
             <div asp-validation-summary="All" class="text-danger"></div>
             <input type="hidden" name="ParentId" value="@ViewBag.ParentId" />
+            <input type="hidden" asp-for="ParticipantId" value="@Model.ParticipantId" />
+            <input type="hidden" asp-for="ParticipantId" value="@Model.StatusDate" />
+            <input type="hidden" asp-for="ParticipantId" value="@Model.ParticipantId" />
+            <input type="hidden" asp-for="ParticipantId" value="@Model.Attendance" />
+
             <input type="hidden" asp-for="GroupEnrollmentId" />
             <div class="form-group" asp-enabled="GroupId">
                 <!--fk select start-->
@@ -23,49 +28,22 @@
                 <span asp-validation-for="GroupId" class="text-danger"></span>
                 <!--fk select end-->
             </div>
-            
-            <div class="form-group" asp-enabled="ParticipantId">
-                <!--fk select start-->
-                <label asp-for="ParticipantId" class="control-label"></label>
-                <select asp-for="ParticipantId" class="form-control custom-select" asp-items="ViewBag.ParticipantId">
-                </select>
-                <span asp-validation-for="ParticipantId" class="text-danger"></span>
-                <!--fk select end-->
-            </div>
-            
+
             <div class="form-group" asp-enabled="EnrollmentDate">
-                <!--input start-->
+                <!--date start-->
                 <label asp-for="EnrollmentDate" class="control-label"></label>
-                <input asp-for="EnrollmentDate" autocomplete="off" class="form-control" />
+                <span class="text-muted small">(@System.Globalization.CultureInfo.CurrentUICulture)</span>
+                <!-- use class .date to enable datepicker -->
+                <div class="input-group date">
+                    <input asp-for="EnrollmentDate" autocomplete="off" type="text" class="form-control" placeholder="@System.Globalization.DateTimeFormatInfo.CurrentInfo.ShortDatePattern" />
+                    <span class="input-group-append">
+                        <span class="input-group-text"><i class="far fa-calendar-alt"></i></span>
+                    </span>
+                </div>
                 <span asp-validation-for="EnrollmentDate" class="text-danger"></span>
-                <!--input end-->
+                <!--date end-->
             </div>
-            
-            <div class="form-group" asp-enabled="Attendance">
-                <!--input start-->
-                <label asp-for="Attendance" class="control-label"></label>
-                <input asp-for="Attendance" autocomplete="off" class="form-control" />
-                <span asp-validation-for="Attendance" class="text-danger"></span>
-                <!--input end-->
-            </div>
-            
-            <div class="form-group" asp-enabled="StatusDate">
-                <!--input start-->
-                <label asp-for="StatusDate" class="control-label"></label>
-                <input asp-for="StatusDate" autocomplete="off" class="form-control" />
-                <span asp-validation-for="StatusDate" class="text-danger"></span>
-                <!--input end-->
-            </div>
-            
-            <div class="form-group" asp-enabled="RefEnrollmentStatusId">
-                <!--fk select start-->
-                <label asp-for="RefEnrollmentStatusId" class="control-label"></label>
-                <select asp-for="RefEnrollmentStatusId" class="form-control custom-select" asp-items="ViewBag.RefEnrollmentStatusId">
-                </select>
-                <span asp-validation-for="RefEnrollmentStatusId" class="text-danger"></span>
-                <!--fk select end-->
-            </div>
-            
+
             <!-- button group start -->
             <div class="form-group text-right mt-5">
                 <a id="cancelbutton" class="btn btn-secondary mr-2" asp-action="Index" asp-route-id="@ViewBag.ParentId">
